Fixed the other user details API
