# src/api/user/userRouter.ts
@@ -7,9 +7,8 @@ export const userRouter = express.Router()
 
 userRouter.get('/', userController.getAllUsers)
 userRouter.get('/my-info', authMiddleware, userController.getMyInfo as Application)
-userRouter.get('/other-info/:id', authMiddleware, userController.getOtherUserInfo as Application)
+userRouter.get('/:id', authMiddleware, userController.getUserDetailsById as Application)
 userRouter.get('/fullUser', authMiddleware, userController.getFullUserByUserId as Application)
-userRouter.get('/:id', authMiddleware, userController.getUsersById as Application)
 userRouter.get('/email/:email', authMiddleware, userController.getUsersByEmail as Application)
 userRouter.put('/update/:id', authMiddleware, userController.updateUser as Application)
 userRouter.delete('/delete/:id', authMiddleware, userController.deleteUser as Application)
